--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <input id="search-field" type="text" class="form-control" placeholder="search food what you want"
             aria-label="Recipient's username" aria-describedby="button-addon2">
         <button onclick="searchFood()" class="btn btn-outline-secondary" type="button"
-            id="button-search">Button</button>
+            id="button-search">Search</button>
     </div>
 
     <!-- spinner -->
