search button color change

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
     <div class="input-group mb-3 w-50 mx-auto">
         <input id="search-field" type="text" class="form-control" placeholder="search food what you want"
             aria-label="Recipient's username" aria-describedby="button-addon2">
-        <button onclick="searchFood()" class="btn btn-outline-secondary" type="button"
-            id="button-search">Search</button>
+        <button onclick="searchFood()" class="btn btn-outline-success" type="button" id="button-search">Search</button>
     </div>
 
     <!-- spinner -->
