--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
 <style>
-    #search-result .card:hover {
+    button {
         cursor: pointer;
     }
 
@@ -23,10 +23,6 @@
         animation: spin 2s linear infinite;
         display: block;
     }
-
-    /* .loader.hide {
-        display: none;
-    } */
 
     @keyframes spin {
         0% {
@@ -54,7 +50,6 @@
             <span class="sr-only"></span>
         </div>
     </div>
-
     <!-- meal details -->
     <div id="meal-details" class="w-50 mx-auto mb-5">
     </div>
